<resources>
    <string name="swiftp_name">FTP Server</string>
    <string name="swiftp_name_free">FTP Server (Free)</string>
    <string name="swiftp_name_demo">FTP Server (Demo)</string>
    <string name="running_label">FTP Server</string>
    <string name="running_summary_stopped">Toggle the state of the FTP server</string>
    <string name="running_summary_started">at %s</string>
    <string name="server_problem_label">Error</string>
    <string name="server_problem_nothing_shared">A client was refused: no folders are shared. Choose folders under Allowed folders.</string>
    <string name="server_problem_no_users">Nobody can log in: there are no users. Add one under Manage users, or allow anonymous.</string>
    <string name="server_problem_user_folder_not_shared">The folder for %1$s is not shared. Set its folder under Manage users, or share the folder again under Allowed folders.</string>
    <string name="server_problem_data_socket">A transfer failed: could not open the data connection.</string>
    <string name="server_problem_data_not_set_up">A transfer failed: the client asked for one without setting up a data connection.</string>
    <string name="server_problem_data_connect_failed">A transfer failed: could not connect to the client at %1$s port %2$d.</string>
    <string name="server_problem_data_tls_failed_active">A transfer failed: the TLS handshake with the client at %1$s port %2$d did not complete.</string>
    <string name="server_problem_data_no_connection">A transfer failed: nothing connected to port %1$d within %2$d seconds. A router or firewall is probably blocking it. Make that port reachable, or set a data port range under Advanced settings, Ports, and open only those ports.</string>
    <string name="server_problem_data_accept_failed">A transfer failed: could not open the data connection on port %1$d.</string>
    <string name="server_problem_data_tls_failed_passive">A transfer failed: the TLS handshake on port %1$d did not complete.</string>
    <string name="running_summary_failed_no_network">
        Failed to start the FTP server, no network a client could reach this device on.
        Connect to Wi-Fi, a hotspot or tethering.
    </string>
    <string name="running_summary_failed_to_get_ip_address">
        Failed to start the FTP server, unable to get IP address
    </string>
    <string name="running_summary_failed_mobile_only">
        Failed to start the FTP server, no client can reach this device over mobile data.
        Connect to Wi-Fi, a hotspot or tethering.
    </string>
    <string name="running_summary_failed_port">
        Failed to start the FTP server, the port is already in use by another app
    </string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>
    <string name="tile_failed_no_network">No network</string>
    <string name="tile_failed_mobile_only">Mobile data only</string>
    <string name="tile_failed_port">Port in use</string>
    <string name="market_version_label">Market version</string>
    <string name="market_version_summary">
        This is the FTP Server Demo version.
        Support development by getting the FTP Server from the android market.
        Click here to go to the market.
    </string>
    <string name="settings_label">Settings</string>
    <string name="user_label">User</string>
    <string name="login_settings_label">Login settings…</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="show_password_label">Display password</string>
    <string name="username_validation_error">
        The username must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="password_validation_error">
        The password must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="allow_anonymous_label">Allow anonymous login</string>
    <string name="anonymous_summary">Use username <b>anonymous</b>\nNo password check, so use anything\nOnly allowed <b>read access</b></string>
    <string name="advanced_settings_label">Advanced settings…</string>
    <string name="port_number_label">Port Number</string>
    <string name="port_validation_error">The port number must be in the range 1 to 65535.</string>
    <string name="chroot_label">Stay in folder</string>
    <string name="chroot_all_allowed_folders">All allowed folders</string>
    <string name="chroot_restrict_to_folder">Restrict to one folder…</string>
    <string name="chroot_not_shared">%1$s is not shared any more</string>
    <string name="chroot_stranded_title">Folder not shared</string>
    <string name="chroot_stranded_message">These logins are kept in a folder that is not shared any more, so they can no longer log in:\n\n%1$s</string>
    <string name="chroot_stranded_fix">Use all allowed folders</string>
    <string name="accept_wifi_label">Accept connection from Wi-Fi</string>
    <string name="wakelock_label">Keep device awake (full CPU speed)</string>
    <string name="writeExternalStorage_label">Writing external storage</string>
    <string name="extra_label">Extra</string>
    <string name="help_label">Help…</string>
    <string name="about_label">About…</string>
    <string name="help_dlg_title">FTP Server Help</string>
    <string name="help_dlg_message">\
Thanks for using FTP Server (SwiFTP)! Here are some brief usage instructions. More
information can be found at http://ppareit.github.com/swiftp/.\n\n\
\
This program allows you to run an ftp server on your android device. This means that any
program can access the files on your device while the ftp server is running. For example,
entering \"ftp://...\" in the firefox url bar will allow you to browse the files on your
device from a desktop pc or a laptop.\n\n
\
By default, the user name and password are both \"ftp\", you should change them. You use
this username and password when accessing the server.\n\n
\
There is a configuration option (\"keep phone awake\") that fixes a problem where
file transfers go slow or stop completely when the phone sleeps. If you have this
problem, check this box and restart the program. Your phone will stay awake as long as
the server is running.\n\n
\
For power and security reasons, it is recommended that the server be stopped after use.\n\n\
\
If something is not working the way you expect it to, please report it to Pieter Pareit
(pieter.pareit@gmail.com).\n\n\
\
The development of this open source program is supported by buying this program through
the google play store. You can follow the development at https://github.com/ppareit/swiftp .
To have an idea on the features that will be implemented, see the issue tracker at
https://github.com/ppareit/swiftp/issues .\n\n
    </string>
    <string name="notification_server_starting">Starting at %s</string>
    <string name="notification_title">FTP Server is running</string>
    <string name="notification_text">at %s</string>
    <string name="notification_stop_text">Stop server</string>
    <string name="shortcut_start_short_label">Start FTP</string>
    <string name="shortcut_start_long_label">Start FTP server</string>
    <string name="shortcut_stop_short_label">Stop FTP</string>
    <string name="shortcut_stop_long_label">Stop FTP server</string>
    <string name="toast_server_started">FTP server started, %s</string>
    <string name="toast_server_stopped">FTP server stopped</string>
    <string name="nsd_servername_postfix">FTP Server</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="demo_while_paid_dialog_title">
        Demo started while paid version is installed
    </string>
    <string name="demo_while_paid_dialog_message">
        Thank you for supporting the development!\n\n
        You are trying to start the demo version while the paid version
        is installed. To insure optimal operation we ask you to remove
        the demo version and only start the paid version.
    </string>
    <string name="app_copyright" translatable="false">© 2012–2026 Pieter Pareit</string>
    <string name="app_url" translatable="false">
        https://ppareit.github.io/swiftp/
    </string>
    <string name="about_license_title">License</string>
    <string name="about_license_name">GNU GPL3</string>
    <string name="about_license_url" translatable="false">
        https://www.gnu.org/licenses/gpl-3.0.en.html
    </string>
    <string name="about_description_title">Description</string>
    <string name="about_description_text">
        FTP Server (SwiFTP) allows you to run an FTP server on your android device.
    </string>
    <string name="about_contributor_title">Contributors</string>
    <string name="about_contributor_list" translatable="false">
        Dave Revell, Alexander Friesen, tescott425, Peng Fei, MadMaverick9, j3l11234,
        Sergey Kondakov, Tianhao Wu, Lorenzo M, Naofumi Fukue, Valerio Bozzolan,
        Thomas Löwe, Mladen Pejaković, valentind44, Ashutosh Gangwar, Nicoss, Poussinou,
        Timotheos Constambeys, chankruze, Waldemar Stoczkowski, Terry Hooper,
        Birgit Niemegeers, Xavron, Miraficus, maryzhon, Nikolya, Valdnet,
        Richard D. Thompson II, Ismael, 3rg1s, Martin C, Linquize, relan,
        wangqi060934, Pontorez
    </string>
    <string name="manage_users_label">Manage users…</string>
    <string name="save">Save</string>
    <string name="show_server_notification">Show server notification</string>
    <string name="show_server_notification_summary">Show the server address and a stop button while the server is running</string>
    <string name="battery_saver_setting_title">Battery Saver</string>
    <string name="battery_saver_desc">NOTE: You *must* manually restart server after changing.</string>
    <string name="allowed_folders_label">Allowed folders…</string>
    <string name="logging">Logging</string>
    <string name="enable_logging">Enable logging</string>
    <string name="manage_log_label">Show logs…</string>
    <string name="ports_title">Ports…</string>
    <string name="general_title">General…</string>
    <string name="ftps_title">FTPS…</string>
    <string name="security_section_title">Security enhancements…</string>
    <string name="port_number_label_data_low">Data port number range low</string>
    <string name="port_number_label_data_high">Data port number range high</string>
    <string name="port_number_label_implicit">FTPS implicit port number</string>
    <string name="enable_tls_implicit">Enable implicit</string>
    <string name="disable_plain_port">Use implicit only</string>
    <string name="disable_plain_not_explicit">Use implicit and explicit only</string>
    <string name="cert_keystore">Certificate: import keystore (jks)</string>
    <string name="cert_trust_store">Certificate: import trust store (bks)</string>
    <string name="cert_pass">Certificate: password</string>
    <string name="cert_show_pass">Certificate: show password</string>
    <string name="cert_use_client">Require client certificate</string>
    <string name="ip_list_title">Allow/deny IPs</string>
    <string name="deny_until_allowed">Deny until allowed</string>
    <string name="manually_add_ip">Manually add IP</string>
    <string name="deny_on_failed_logins">Deny on 3 failed logins</string>
    <string name="clear_unused_ips">Clear unused IPs</string>
    <string name="implicit_only_summary">Disables plain port</string>
    <string name="implicit_explicit_only_summary">Enables encryption only</string>
    <string name="disable_banner_title">Disable banner</string>
    <string name="disable_feat_title">Disable FEAT</string>
    <string name="disable_syst_title">Disable SYST</string>
    <string name="tls_limit_protocols_title">Limit protocols</string>
</resources>