<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2011-2013 Pieter Pareit

This file is part of SwiFTP.

SwiFTP is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SwiFTP is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SwiFTP.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="preference_screen">

    <SwitchPreference
        android:defaultValue="false"
        android:key="running_switch"
        android:summary="@string/running_summary_stopped"
        android:title="@string/running_label"
        app:iconSpaceReserved="false" />
    <!-- Not persisted, the checked state is read from the system -->
    <CheckBoxPreference
        android:key="show_server_notification"
        android:persistent="false"
        android:summary="@string/show_server_notification_summary"
        android:title="@string/show_server_notification"
        app:iconSpaceReserved="false" />
    <Preference
        android:key="market_version"
        android:summary="@string/market_version_summary"
        android:title="@string/market_version_label"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:key="settings"
        android:title="@string/settings_label"
        app:iconSpaceReserved="false">

        <Preference
            android:key="manage_users"
            android:title="@string/manage_users_label" />

        <Preference
            android:key="allowed_folders"
            android:title="@string/allowed_folders_label" />

        <PreferenceScreen
            android:key="preference_screen_advanced"
            android:title="@string/advanced_settings_label">

            <PreferenceCategory
                android:title="@string/ports_title"
                app:iconSpaceReserved="false">

                <EditTextPreference
                    android:defaultValue="@string/portnumber_default"
                    android:inputType="number"
                    android:key="portNum"
                    android:title="@string/port_number_label" />

                <EditTextPreference
                    android:defaultValue="@string/portnumber_default_pasv_low"
                    android:inputType="number"
                    android:key="portRangePasvLow"
                    android:title="@string/port_number_label_data_low" />

                <EditTextPreference
                    android:defaultValue="@string/portnumber_default_pasv_high"
                    android:inputType="number"
                    android:key="portRangePasvHigh"
                    android:title="@string/port_number_label_data_high" />

                <EditTextPreference
                    android:defaultValue="@string/portnumber_default_implicit"
                    android:dependency="enableImplicitPort"
                    android:inputType="number"
                    android:key="portNumImplicit"
                    android:title="@string/port_number_label_implicit" />

            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/general_title"
                app:iconSpaceReserved="false">

                <CheckBoxPreference
                    android:defaultValue="@string/wakelock_default"
                    android:key="stayAwake"
                    android:title="@string/wakelock_label" />

                <ListPreference
                    android:defaultValue="0"
                    android:dialogTitle="@string/battery_saver_setting_title"
                    android:entries="@array/pref_list_battery_saver_titles"
                    android:entryValues="@array/pref_list_battery_saver_values"
                    android:key="battery_saver"
                    android:summary="@string/battery_saver_desc"
                    android:title="@string/battery_saver_setting_title" />

            </PreferenceCategory>

            <PreferenceCategory
                android:key="settings"
                android:title="@string/logging"
                app:iconSpaceReserved="false">
                <CheckBoxPreference
                    android:defaultValue="@string/enableLogging_default"
                    android:key="enable_logging"
                    android:title="@string/enable_logging" />

                <Preference
                    android:key="logs"
                    android:title="@string/manage_log_label" />

            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/ftps_title"
                app:iconSpaceReserved="false">

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="enableImplicitPort"
                    android:title="@string/enable_tls_implicit" />

                <!-- SSL not tested at all so leaving commented and fully disabled -->
                <!-- <CheckBoxPreference
                     android:defaultValue="false"
                     android:drawableStart="@drawable/ic_shared_dir"
                     android:drawableLeft="@drawable/ic_shared_dir"
                     android:key="enableSsl"
                     android:title="@string/enable_ssl" />-->

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="disablePlainPort"
                    android:summary="@string/implicit_only_summary"
                    android:title="@string/disable_plain_port" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="disablePlainNotExplicit"
                    android:summary="@string/implicit_explicit_only_summary"
                    android:title="@string/disable_plain_not_explicit" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="certKeyStore"
                    android:title="@string/cert_keystore" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="certTrustStore"
                    android:title="@string/cert_trust_store" />

                <EditTextPreference
                    android:defaultValue=""
                    android:inputType="textPassword"
                    android:key="certPassword"
                    android:title="@string/cert_pass" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="certShowPassword"
                    android:title="@string/cert_show_pass" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="useClientCert"
                    android:title="@string/cert_use_client" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="early150Response"
                    android:title="@string/early_150_response" />

                <MultiSelectListPreference
                    android:dialogTitle="@string/tls_limit_protocols_title"
                    android:key="limitTLSProtocols"
                    android:title="@string/tls_limit_protocols_title" />

            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/security_section_title"
                app:iconSpaceReserved="false">

                <MultiSelectListPreference
                    android:dialogTitle="@string/ip_list_title"
                    android:key="ip_list"
                    android:title="@string/ip_list_title" />

                <EditTextPreference
                    android:defaultValue=""
                    android:hint="000.111.0.*"
                    android:inputType="text"
                    android:key="manuallyAddIP"
                    android:title="@string/manually_add_ip" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="clearUnusedIPs"
                    android:title="@string/clear_unused_ips" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="denyUntilAllowed"
                    android:title="@string/deny_until_allowed" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="denyOnFailedLogins"
                    android:title="@string/deny_on_failed_logins" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="disableBanner"
                    android:title="@string/disable_banner_title" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="disableFeat"
                    android:title="@string/disable_feat_title" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:drawableStart="@drawable/ic_shared_dir"
                    android:drawableLeft="@drawable/ic_shared_dir"
                    android:key="disableSyst"
                    android:title="@string/disable_syst_title" />

            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="extra_category"
        android:title="@string/extra_label"
        app:iconSpaceReserved="false">
        <Preference
            android:key="help"
            android:title="@string/help_label" />
        <Preference
            android:key="about"
            android:title="@string/about_label" />
    </PreferenceCategory>

</PreferenceScreen>
